// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`html, renders dark 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "overflow": "hidden",
      },
      Object {
        "backgroundColor": "#f8f9fa",
      },
      Object {
        "backgroundColor": "#000",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
          "overflow": "hidden",
        },
        undefined,
      ]
    }
  >
    <RNCWebView
      automaticallyAdjustContentInsets={false}
      cacheEnabled={true}
      content="<b>Hello, World!</b>"
      contentInset={
        Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0,
        }
      }
      contentInsetAdjustmentBehavior="automatic"
      injectedJavaScriptBeforeContentLoadedForMainFrameOnly={true}
      injectedJavaScriptForMainFrameOnly={true}
      javaScriptEnabled={true}
      keyboardDismissMode="on-drag"
      messagingEnabled={true}
      onContentProcessDidTerminate={[Function]}
      onHttpError={[Function]}
      onLoadingError={[Function]}
      onLoadingFinish={[Function]}
      onLoadingProgress={[Function]}
      onLoadingStart={[Function]}
      onMessage={[Function]}
      onShouldStartLoadWithRequest={[Function]}
      scrollEnabled={false}
      source={
        Object {
          "baseUrl": undefined,
          "html": "
            <html>
            <head>
                <title></title>
                <meta charset=\\"UTF-8\\"/>
                <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no\\" />
                <style>
                    * {
                        margin: 0;
                        padding: 0;
                    }
                    
                h1.alert {
                    font-size: 16px;
                    padding: 16px;
                    font-family: OpenSans;
                    background: #EA3C48;
                    font-weight: normal;
                    color: #8e8e93;
                    line-height: 18px;
                }
                div {
                    background: #1c1c1e;
                    padding: 16px;
                    font-size: 16px;
                    color: #8e8e93;
                    margin-top: 14px;
                    font-family: OpenSans;
                    line-height: 22px;
                }
                div:last-child {
                    margin-bottom: 14px;
                }
                div.blue-notes {
                    position: relative;
                    background: #0984FF;
                    color: #8e8e93;
                    padding-left: 72px;
                }
                div.blue-notes:before {
                    content:'';
                    position: absolute;
                    left: 15px;
                    top: 16px;
                    display: inline-block;
                    width: 25px;
                    height: 25px;
                    background-image: url(https://awardwallet.com/assets/awardwalletnewdesign/img/sprite.png);
                    background-repeat: no-repeat;
                    background-position: -538px -136px;
                }
                div a {
                    font-size: 16px;
                    color: #0984FF;
                    text-decoration: none;
                }
                div a:active {
                    text-decoration: underline;
                }
                div .userEmail {
                    font-size: 16px;
                    background: #0984FF;
                    color: #8e8e93;
                    line-height: 1.2;
                    padding: 4px 5px;
                    display: inline-block;
                    margin-top: 2px;
                    text-decoration: none;
                    border-radius: 1px;
                }
                @media (-webkit-min-device-pixel-ratio: 1.5), not all, not all, (min-resolution: 1.5dppx)
                    div.blue-notes:before {
                        background-image: url(https://awardwallet.com/assets/awardwalletnewdesign/img/sprite@2x.png);
                        background-size: 800px 600px;
                    }
                }
           
                    b {font-size: 12px;}
                </style>
                <script>
                    function onload() {
                        window.ReactNativeWebView.postMessage('loaded');
                    }
                </script>
            </head>
            <body onload=\\"onload()\\">
                <b>Hello, World!</b>
            </body>
            <script>
                
    window.getClientHeight = function() {
        return document.documentElement.offsetHeight;
    };

    window.sendClientHeight = function() {
        window.ReactNativeWebView.postMessage(window.getClientHeight());
    };

    setTimeout(() => window.sendClientHeight(), 250);

            </script>
            </html>
        ",
        }
      }
      style={
        Array [
          Object {
            "flex": 1,
            "overflow": "hidden",
          },
          Object {
            "backgroundColor": "#ffffff",
          },
          Array [
            undefined,
            Object {
              "backgroundColor": "#f8f9fa",
            },
            Object {
              "backgroundColor": "#000",
            },
            false,
          ],
        ]
      }
      theme="dark"
      useSharedProcessPool={true}
    />
  </View>
</View>
`;

exports[`html, renders default 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "overflow": "hidden",
      },
      Object {
        "backgroundColor": "#f8f9fa",
      },
      false,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
          "overflow": "hidden",
        },
        undefined,
      ]
    }
  >
    <RNCWebView
      automaticallyAdjustContentInsets={false}
      cacheEnabled={true}
      content="<b>Hello, World!</b>"
      contentInset={
        Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
          "top": 0,
        }
      }
      contentInsetAdjustmentBehavior="automatic"
      injectedJavaScriptBeforeContentLoadedForMainFrameOnly={true}
      injectedJavaScriptForMainFrameOnly={true}
      javaScriptEnabled={true}
      keyboardDismissMode="on-drag"
      messagingEnabled={true}
      onContentProcessDidTerminate={[Function]}
      onHttpError={[Function]}
      onLoadingError={[Function]}
      onLoadingFinish={[Function]}
      onLoadingProgress={[Function]}
      onLoadingStart={[Function]}
      onMessage={[Function]}
      onShouldStartLoadWithRequest={[Function]}
      scrollEnabled={false}
      source={
        Object {
          "baseUrl": undefined,
          "html": "
            <html>
            <head>
                <title></title>
                <meta charset=\\"UTF-8\\"/>
                <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no\\" />
                <style>
                    * {
                        margin: 0;
                        padding: 0;
                    }
                    
                h1.alert {
                    font-size: 16px;
                    padding: 16px;
                    font-family: OpenSans;
                    background: #cc3d5e;
                    font-weight: normal;
                    color: #fff;
                    line-height: 18px;
                }
                div {
                    background: #f8f9fa;
                    padding: 16px;
                    font-size: 16px;
                    color: #5c6373;
                    margin-top: 14px;
                    font-family: OpenSans;
                    line-height: 22px;
                }
                div:last-child {
                    margin-bottom: 14px;
                }
                div.blue-notes {
                    position: relative;
                    background: #4684c4;
                    color: #fff;
                    padding-left: 72px;
                }
                div.blue-notes:before {
                    content:'';
                    position: absolute;
                    left: 15px;
                    top: 16px;
                    display: inline-block;
                    width: 25px;
                    height: 25px;
                    background-image: url(https://awardwallet.com/assets/awardwalletnewdesign/img/sprite.png);
                    background-repeat: no-repeat;
                    background-position: -538px -136px;
                }
                div a {
                    font-size: 16px;
                    color: #4684c4;
                    text-decoration: none;
                }
                div a:active {
                    text-decoration: underline;
                }
                div .userEmail {
                    font-size: 16px;
                    background: #4684c4;
                    color: #fff;
                    line-height: 1.2;
                    padding: 4px 5px;
                    display: inline-block;
                    margin-top: 2px;
                    text-decoration: none;
                    border-radius: 1px;
                }
                @media (-webkit-min-device-pixel-ratio: 1.5), not all, not all, (min-resolution: 1.5dppx)
                    div.blue-notes:before {
                        background-image: url(https://awardwallet.com/assets/awardwalletnewdesign/img/sprite@2x.png);
                        background-size: 800px 600px;
                    }
                }
           
                    b {font-size: 12px;}
                </style>
                <script>
                    function onload() {
                        window.ReactNativeWebView.postMessage('loaded');
                    }
                </script>
            </head>
            <body onload=\\"onload()\\">
                <b>Hello, World!</b>
            </body>
            <script>
                
    window.getClientHeight = function() {
        return document.documentElement.offsetHeight;
    };

    window.sendClientHeight = function() {
        window.ReactNativeWebView.postMessage(window.getClientHeight());
    };

    setTimeout(() => window.sendClientHeight(), 250);

            </script>
            </html>
        ",
        }
      }
      style={
        Array [
          Object {
            "flex": 1,
            "overflow": "hidden",
          },
          Object {
            "backgroundColor": "#ffffff",
          },
          Array [
            undefined,
            Object {
              "backgroundColor": "#f8f9fa",
            },
            false,
            false,
          ],
        ]
      }
      theme="light"
      useSharedProcessPool={true}
    />
  </View>
</View>
`;
